--- a/elk/lecture/k8sELK/kibana_3/values.yaml
+++ b/elk/lecture/k8sELK/kibana_3/values.yaml
@@ -1,1 +1,6 @@
-elasticsearchHosts: "http://elasticsearch-master:9200"
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: my-configmap
+data:
+  elasticsearchHosts: "http://elasticsearch-master:9200"
